[gd_scene load_steps=4 format=3 uid="uid://b3ckj7b11lsj2"]

[ext_resource type="Script" path="res://scripts/screens/level_complete.gd" id="1_6qdjo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gdm3r"]
bg_color = Color(0.15, 0.2, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8
shadow_offset = Vector2(4, 4)

[sub_resource type="Animation" id="Animation_v6jbc"]
resource_name = "screen_appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContentPanel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(0.5, 1.5, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContentPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DimBackground:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[node name="LevelComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qdjo")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="ContentPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_gdm3r")

[node name="VBoxContainer" type="VBoxContainer" parent="ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="ContentPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="ContentPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="ContentPanel/VBoxContainer"]
layout_mode = 2

[node name="ScoreContainer" type="HBoxContainer" parent="ContentPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="ContentPanel/VBoxContainer/StatsContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Score:"
horizontal_alignment = 2

[node name="ScoreValue" type="Label" parent="ContentPanel/VBoxContainer/StatsContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="MovesContainer" type="HBoxContainer" parent="ContentPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
alignment = 1

[node name="MovesLabel" type="Label" parent="ContentPanel/VBoxContainer/StatsContainer/MovesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Moves:"
horizontal_alignment = 2

[node name="MovesValue" type="Label" parent="ContentPanel/VBoxContainer/StatsContainer/MovesContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="TimeContainer" type="HBoxContainer" parent="ContentPanel/VBoxContainer/StatsContainer"]
layout_mode = 2
alignment = 1

[node name="TimeLabel" type="Label" parent="ContentPanel/VBoxContainer/StatsContainer/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Time:"
horizontal_alignment = 2

[node name="TimeValue" type="Label" parent="ContentPanel/VBoxContainer/StatsContainer/TimeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "00:00"

[node name="Spacer" type="Control" parent="ContentPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="ContentPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MenuButton" type="Button" parent="ContentPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "MENU"

[node name="RetryButton" type="Button" parent="ContentPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "RETRY"

[node name="NextButton" type="Button" parent="ContentPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "NEXT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("Animation_v6jbc")
}
